[gd_scene load_steps=8 format=3 uid="uid://blhupii7e8ong"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_6elmv"]
[ext_resource type="Texture2D" uid="uid://cw75bmq76prwm" path="res://assets/entitys/slime.png" id="1_ajkym"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t0k4c"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6hk4w"]
size = Vector2(10, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_iiuix"]
radius = 76.0066

[sub_resource type="Animation" id="Animation_iqulp"]
resource_name = "slime"
length = 2.37
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0666, 0.2331, 0.5328, 1.1988, 1.6983),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5661, 0.999, 1.4985),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -30), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jlep8"]
_data = {
"slime": SubResource("Animation_iqulp")
}

[node name="slime" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_6elmv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.405283, 0.418346)
shape = SubResource("RectangleShape2D_t0k4c")

[node name="player_intersector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_intersector"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_6hk4w")

[node name="sight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="sight"]
shape = SubResource("CircleShape2D_iiuix")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.663
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jlep8")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_ajkym")
hframes = 3
frame = 1

[connection signal="area_entered" from="player_intersector" to="." method="_on_player_intersector_area_entered"]
[connection signal="body_entered" from="player_intersector" to="." method="_on_player_intersector_body_entered"]
[connection signal="body_entered" from="sight" to="." method="_on_sight_body_entered"]
[connection signal="body_exited" from="sight" to="." method="_on_sight_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
